objects/Pays__c.object
<CustomObject>
    <fields>
        <fullName>Code_Pays_2_caracteres__c</fullName>
        <label>Code Pays 2 caractères</label>
        <length>2</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Code_Pays__c</fullName>
        <externalId>true</externalId>
        <label>Code Pays</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Indicatif__c</fullName>
        <label>Indicatif Tel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reseau__c</fullName>
        <label>Réseau</label>
        <picklist>
            <picklistValues>
                <fullName>UE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Pays</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Code_Pays__c</columns>
        <columns>Code_Pays_2_caracteres__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
        <language>fr</language>
    </listViews>
    <nameField>
        <label>Nom de Pays</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>